--- a/index.html
+++ b/index.html
@@ -95,15 +95,81 @@
     <!-- Privacy Policy Page -->
     <section id="privacy-policy" class="legal">
       <h2>🔐 Privacy Policy</h2>
-      <p>WavyBot does not store personally identifiable information outside of Discord. We only use necessary information (such as user, channel, message IDs) to provide the bot's functions. We do not share or sell your information. All data is handled securely and responsibly.</p>
+      <div class="legal-content">
+        <p>Your privacy is important to us. This policy outlines how WavyBot collects, uses, and protects your data.</p>
+        
+        <h3>1. Data Collection</h3>
+        <p>WavyBot collects only the data strictly necessary for its functionality, including:</p>
+        <ul>
+          <li><strong>Discord User IDs:</strong> To identify users for moderation actions, command usage, and personalized features (e.g., leveling system). These are stored encrypted.</li>
+          <li><strong>Discord Guild (Server) IDs:</strong> To store server-specific configurations (e.g., logging channels, anti-raid settings) and track bot presence.</li>
+          <li><strong>Discord Channel IDs:</strong> For setting up specific channels for logs, welcome messages, etc.</li>
+          <li><strong>Limited Message Content:</strong> Temporarily processed for command parsing, anti-raid detection, and moderation logs. Message content is NOT stored unless explicitly required for a specific bot feature (like suggestion logs, which would be visible to your server staff) and is always anonymized where possible.</li>
+          <li><strong>Bot-related Settings:</strong> Configurations set by server administrators (e.g., enable/disable features, thresholds, custom messages).</li>
+        </ul>
+
+        <h3>2. Use of Data</h3>
+        <p>The collected data is used exclusively for:</p>
+        <ul>
+          <li>Providing WavyBot's intended features (moderation, anti-raid, utility, fun commands).</li>
+          <li>Storing and applying server-specific configurations.</li>
+          <li>Internal analytics to improve bot performance and identify common issues (anonymous).</li>
+          <li>Responding to support requests.</li>
+        </ul>
+
+        <h3>3. Data Storage & Security</h3>
+        <p>All data is stored securely using industry-standard practices. We take reasonable measures to protect your information from unauthorized access, alteration, disclosure, or destruction. Data is stored on secure servers located [mention rough region if known, e.g., "in North America"]. Data is retained only as long as necessary to provide the bot's services or as required by law.</p>
+
+        <h3>4. Data Sharing</h3>
+        <p>WavyBot does NOT share, sell, rent, or trade your personal data with any third parties under any circumstances.</p>
+
+        <h3>5. Your Rights</h3>
+        <p>You have the right to request access to the data WavyBot holds about your server or your user ID. You can also request the deletion of your server's configuration data by removing WavyBot from your server or by contacting our support team via our <a href="https://discord.gg/ScQVXQsczK" target="_blank">Support Server</a>.</p>
+
+        <h3>6. Changes to This Policy</h3>
+        <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new policy on this page and/or through Discord announcements. Your continued use of WavyBot after such changes constitutes your acceptance of the new policy.</p>
+
+        <p class="last-updated">Last Updated: June 5, 2025</p>
+      </div>
     </section>
 
     <!-- Terms and Conditions Page -->
     <section id="terms-conditions" class="legal">
       <h2>📜 Terms and Conditions</h2>
-      <p>By using WavyBot, you agree not to use it for illegal, offensive activities, or activities that violate Discord's terms. The team behind Wavy reserves the right to remove access to the bot in case of misuse or abuse of the service.</p>
-      <p>Using Wavy implies that you understand and accept these terms.</p>
-      <p><strong>⚠️ Disclaimer:</strong> By using WavyBot, you agree that neither the bot nor its developer are responsible for damages caused by errors, misuse, or situations beyond the technical team's control.</p>
+      <div class="legal-content">
+        <p>By using WavyBot, you agree to these Terms and Conditions. Please read them carefully.</p>
+
+        <h3>1. Acceptance of Terms</h3>
+        <p>By adding WavyBot to your Discord server or using any of its features, you acknowledge that you have read, understood, and agree to be bound by these Terms and Conditions. If you do not agree, you may not use WavyBot.</p>
+
+        <h3>2. Permitted Use</h3>
+        <p>WavyBot is intended for use in accordance with Discord's Terms of Service and Community Guidelines. You agree to use WavyBot for its intended purpose of server management, moderation, and entertainment.</p>
+
+        <h3>3. Prohibited Conduct</h3>
+        <p>You agree NOT to use WavyBot for any of the following:</p>
+        <ul>
+          <li>Illegal activities or activities that violate any applicable laws or regulations.</li>
+          <li>Spamming, harassment, or any form of abusive behavior towards other users or Discord.</li>
+          <li>Attempting to exploit, hack, or disrupt WavyBot's functionality or Discord's services.</li>
+          <li>Promoting or facilitating illegal content, hate speech, or discrimination.</li>
+          <li>Any activity that violates Discord's Terms of Service or Community Guidelines.</li>
+        </ul>
+
+        <h3>4. Bot Availability & Limitations</h3>
+        <p>WavyBot is provided "as is" and "as available" without any warranties. While we strive for high uptime and reliability, we do not guarantee uninterrupted or error-free service. WavyBot may be unavailable due to maintenance, technical issues, or unforeseen circumstances. We reserve the right to modify, suspend, or discontinue WavyBot at any time without notice.</p>
+
+        <h3>5. Disclaimer of Warranties</h3>
+        <p>WAVYBOT IS PROVIDED WITHOUT WARRANTIES OF ANY KIND, WHETHER EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, OR NON-INFRINGEMENT. WE DO NOT WARRANT THAT THE BOT WILL BE ERROR-FREE OR THAT ACCESS TO IT WILL BE CONTINUOUS OR UNINTERRUPTED.</p>
+
+        <h3>6. Limitation of Liability</h3>
+        <p>TO THE FULLEST EXTENT PERMITTED BY APPLICABLE LAW, IN NO EVENT SHALL WAVYBOT OR ITS DEVELOPER (LEGACY) BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, OR ANY LOSS OF PROFITS OR REVENUES, WHETHER INCURRED DIRECTLY OR INDIRECTLY, OR ANY LOSS OF DATA, USE, GOODWILL, OR OTHER INTANGIBLE LOSSES, RESULTING FROM (A) YOUR ACCESS TO OR USE OF OR INABILITY TO ACCESS OR USE THE BOT; (B) ANY CONDUCT OR CONTENT OF ANY THIRD PARTY ON THE BOT; OR (C) UNAUTHORIZED ACCESS, USE, OR ALTERATION OF YOUR TRANSMISSIONS OR CONTENT.</p>
+
+        <h3>7. Changes to Terms</h3>
+        <p>We reserve the right to modify these Terms and Conditions at any time. We will notify you of any significant changes by posting the new Terms on this page. Your continued use of WavyBot after any such changes constitutes your acceptance of the new Terms.</p>
+
+        <h3>8. Contact</h3>
+        <p>If you have any questions about these Terms, please contact us via our <a href="https://discord.gg/ScQVXQsczK" target="_blank">Support Server</a>.</p>
+      </div>
     </section>
   </main>
 
