little update in theme's icon and other displays shows

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
       <a href="#terms-conditions">Terms</a>
     </nav>
 
-    <button id="toggle-theme" class="btn big" aria-label="Toggle Theme">
-    ⚡ Light Theme / Dark Theme ⚡
-    </button>
+    <button id="toggle-theme" class="btn big theme-toggle-btn" aria-label="Toggle Theme">
+    <span class="dark-theme-icon" role="img" aria-label="Sun icon">☀️</span>
+    <span class="light-theme-icon" role="img" aria-label="Moon icon">🌙</span>
+</button>
+
   </header>
 
   <main>
