"good botton" # i guess.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="card">
           <h3>ℹ️ Utilities</h3>
-          <p>Informative commands, suggestions, polls, bot uptime, and more useful tools.</p>
+          <p>Informative commands, suggestions, bot uptime, and more useful tools cooming soon.</p>
         </div>
       </div>
     </section>
