--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="card">
           <h3>🛡️ Anti-Raid System</h3>
-          <p>Intelligent protection against mass mentions, fake bots, and suspicious names.</p>
+          <p>Intelligent protection against mass mentions, fake bots, and suspicious names, ANTI-CAPS, anti-links.</p>
         </div>
         <div class="card">
           <h3>📋 Moderation Logs</h3>
